# hermes-binance

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  STATE.md  docker-compose.yaml  docker-compose.yml  hermes-compose.local.yml  hermes-coolify.yml  pyproject.toml
.claude/: done.md
docs/: betrader-hydra-issue-draft.md
docs/fsa-tools/plans/: 2026-06-09-hermes-binance-strategist-m1.md  2026-06-10-hermes-binance-event-driven-f1.md  2026-06-10-hermes-binance-risk-gateway-f2.md  2026-06-11-hawk-github-issues.md  2026-06-11-token-burn-heartbeat-4h.md
docs/hermes-validate/: 2026-06-12-hawk-functionality-validation.md
docs/superpowers/specs/: 2026-06-09-betrader-api-verification.md  2026-06-09-hermes-binance-strategist-design.md  2026-06-11-hawk-github-issues-design.md
docs/video-subtitles/best-1-minute-scalping-strategy-ever-simple-and-proven-dC6isQNwY6s/: metadata.json  transcript.txt  transcript.vtt
hermes/: .gitignore  AGENTS.md  SOUL.md  config.yaml  dogmas.yaml
hermes/cron/: jobs.json
hermes/scripts/: betrader_client.py  commit_domain.py  gh_auth.py  mulham_analyzer.py  observability.py  risk_engine.py  risk_gateway.py  schemas.py  strategist_cycle.py  webhook_shim.py
tests/e2e/: test_lifecycle_dry_run.py  test_lifecycle_event.py
tests/integration/: test_cycle.py
tests/unit/: test_betrader_client.py  test_commit_domain.py  test_gh_auth.py  test_mulham_analyzer.py  test_observability.py  test_risk_engine.py  test_risk_gateway.py  test_schemas.py  test_smoke.py  test_strategist_cycle.py  test_webhook_shim.py
(+32 files in other folders)
